--- a/src/Face Detection/style.css
+++ b/src/Face Detection/style.css
@@ -9,7 +9,15 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
   }
+
+  .netra-video {
+    visibility: hidden;
+  }
   
+  .netra-canvas {
+    visibility: hidden;
+  }
+
   /* netra-Modal Content/Box */
   .netra-modal-content {
     background-color: #fefefe;
