--- a/src/extension/style.css
+++ b/src/extension/style.css
@@ -1,8 +1,9 @@
 button {
     height: 30px;
-    width: 30px;
+    width: 60px;
     outline: none;
     margin: 10px;
+    display: block;
     border: none;
     border-radius: 2px;
   }
